[package]
name = "acme-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
rustls = "0.23.21"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
openssl = "0.10.68"
tempfile = "3.15.0"
thiserror = "2.0.11"
mockito = "1.6.1"
